# Point_multiple_ways

./: README.md
turtlebot3/: package.xml
turtlebot3_navigation/: CMakeLists.txt  package.xml
turtlebot3_navigation/config/: clicked_points.yaml  example.yaml
turtlebot3_navigation/include/turtlebot3_navigation/: waypoint_manager.h  waypoint_navigation.h
turtlebot3_navigation/launch/: clear_costmap.launch  save_point.launch  turtlebot3_navigation.launch  yaml_rw.launch
turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz  turtlebot3_teb_navigation.rviz
turtlebot3_navigation/src/: save_clicked_point.cpp  waypoint_navigation.cpp  yaml_rw.cpp
turtlebot3_navigation/src/clear_costmap/: clear_costmap.cpp
waypoint/: CMakeLists.txt  package.xml
waypoint/config/: clicked_points.yaml  move_paths.yaml  save_objects.yaml  save_polygons.yaml
waypoint/include/save_clicked_point/: save_clicked_point.h
waypoint/include/save_move_path/: save_move_path.h
waypoint/include/save_object_local/: save_object_local.h
waypoint/include/save_polygon_local/: save_polygon_local.h
waypoint/include/selection_saver/: selection_saver.h
waypoint/launch/: save_point.launch
waypoint/param/: file_path_param.yaml  param.yaml
waypoint/rviz/: sip_node.rviz
waypoint/src/: area_marker.cpp  main.cpp  save_clicked_point.cpp  save_move_path.cpp  save_object_local.cpp  save_polygon_local.cpp  selection_saver.cpp  waypoint_navigation.cpp
waypoint_manager/: CMakeLists.txt  package.xml
waypoint_manager/config/: move_paths.yaml  save_objects.yaml  save_polygons.yaml
waypoint_manager/include/save_object_local/: save_object_local.h
waypoint_manager/include/save_polygon_local/: save_polygon_local.h
waypoint_manager/launch/: save_point.launch  waypoint_navigation.launch
waypoint_manager/param/: file_path_param.yaml  waypoint_navigation_param.yaml
waypoint_manager/rviz/: sip_node.rviz
waypoint_manager/src/: save_clicked_point_backup.cpp  save_object_local.cpp  save_polygon_local.cpp  waypoint_navigation.cpp
